gcc/testsuite/g++.dg/other/static4.C
// { dg-options -Wno-pedantic }

void foo()
{
  static void bar();  // { dg-error "3:cannot declare static function" }
}
